--- a/module/UnpApplication/view/layout/parts/chrome-frame.phtml
+++ b/module/UnpApplication/view/layout/parts/chrome-frame.phtml
@@ -2,7 +2,7 @@
 <!--[if lt IE 8]>
   <div class="alert-danger top-alert">
     <div class="alert alert-danger">
-      <p><?php echo sprintf($this->translate('Your browser is %sancient!%s %sUpgrade to a different browser%s or %sinstall Google Chrome Frame%s to experience this site.', '<em>', '</em>', '<a href="http://browsehappy.com/">', '</a>', '<a href="http://www.google.com/chromeframe/?redirect=true">', '</a>')); ?></p>
+      <p><?php echo sprintf($this->translate('Your browser is %sancient!%s %sUpgrade to a different browser%s or %sinstall Google Chrome Frame%s to experience this site.'), '<em>', '</em>', '<a href="http://browsehappy.com/">', '</a>', '<a href="http://www.google.com/chromeframe/?redirect=true">', '</a>'); ?></p>
     </div>
   </div>
 <![endif]-->
