--- a/module/UnpApplication/view/layout/layout.phtml
+++ b/module/UnpApplication/view/layout/layout.phtml
@@ -1,27 +1,17 @@
 <?php
 //$menu = $this->layout()->menu;
-//$defaultNamespace = new Zend_Session_Namespace('Default');
-//$me = Zend_Registry::getInstance()->user;
-//$em = Zend_Registry::getInstance()->entitymanager;
 //$query = $em->createQuery("SELECT c.id AS value, c.alias AS label FROM Application_Model_Case c WHERE :userId MEMBER OF c.collaborators");
 //$query->setParameter('userId', $me->getId());
 //$cases = $query->getArrayResult();
 ?>
 <?php echo $this->partial('layout/header'); ?>
-<div role="main" class="clearfix">
-<?php echo $this->flashMessages(); ?>
-<?php if(!empty($this->title)): ?>
-    <h2><?php echo $this->escape($this->title); ?></h2>
-  <?php endif; ?>
-  <div class="main">
-    <div id="main-wrapper">
+<div role="main" class="clearfix row-fluid">
+  <?php echo $this->flashMessages(); ?>
   <?php echo $this->content; ?>
-    </div>
-  </div>
 </div>
-<?php
-if(!empty($menu)){
-  //echo $this->render('layout/sidebar_menu', array('actions'=>$this->layout()->menu));
-}
-?>
+<?php if(!empty($menu)): ?>
+  <aside>
+    <?php //echo $this->render('layout/sidebar_menu', array('actions'=>$this->layout()->menu)); ?>
+  </aside>
+<?php endif; ?>
 <?php echo $this->partial('layout/footer'); ?>
