--- a/resources/sass/project/_base.scss
+++ b/resources/sass/project/_base.scss
@@ -4,6 +4,7 @@ $pictonBlue: #40C0E9;
 $alto: #ddd;
 $mineShaft: #333;
 $wildSand: #f5f5f5;
+$lightGray: #efefef;
 
 // actual color assignments
 $mainBackgroundColor: $wildSand;
