--- a/resources/sass/project/_main.scss
+++ b/resources/sass/project/_main.scss
@@ -2,13 +2,13 @@ body {
   background-color: $mainBackgroundColor;
   color: $mineShaft;
   min-width: 240px;
+  font-size: 14px;
 }
 
 h2 {
   color: $pictonBlue;
   margin: 0 0 10px 0;
-  font-weight: 200;
-  font-size: 17pt;
+  display: inline-block;
 }
 
 /* ==|== reusable styles ======================================================= */
@@ -39,8 +39,6 @@ h2 {
 
 .avatar,
 .avatar-small{
-  width: 50px;
-  height: 50px;
   border: 3px solid #F5F5F5;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -365,19 +363,17 @@ header[role=banner] {
   top: -80px;
   margin-bottom: -60px;
   background: image-url('header_font.png') no-repeat right top #40C0E9;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
+  @include border-radius(3px);
 }
 
-header[role=banner] h1 {
+header[role=banner] hgroup {
   background: image-url('logo.png') no-repeat center center transparent;
   width: 182px;
   height: 53px;
-  margin: 10px 0 0 10px;
+  margin: 20px 0 0 10px;
 }
 
-header[role=banner] h1 a {
+header[role=banner] hgroup a {
   display: block;
 }
 
@@ -386,12 +382,8 @@ header[role=banner] h1 a {
   margin: 0 auto 30px;;
   padding: 0 1.5625% 10px 1.5625%; /* 15px/960px */
   background-color: white;
-  -moz-box-shadow: 0 0 5px 5px #BBB;
-  -webkit-box-shadow: 0 0 5px 3px #BBB;
-  box-shadow: 0 0 5px 3px #BBB;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
+  @include box-shadow(#BBB 0 0 5px 3px);
+  @include border-radius(2px);
 }
 
 .navbar-inverse .navbar-inner {
@@ -1206,132 +1198,119 @@ dl.zend_form dd dt {
   width: 80%;
 }  
   
-#activity-stream .activity {
-  border-bottom: 1px #EFEFEF solid;
-  padding: 5px 8px 8px 8px;
+/* activity stream */
+.activity-stream {
+  list-style-type: none;
+  margin: 0;
 }
 
-#activity-stream .activity:hover {
+.activity-stream .activity {
+  position: relative;
+  border-bottom: 1px #EFEFEF solid;
+  padding: 8px;
+  
+  @media screen and (max-width: 767px){
+    padding: 10px 0;
+  }
+}
+
+.activity-stream .activity:hover {
   background-color: #dcebff;
 }
 
-#activity-stream .activity .image {
-  width: 80px;
-  position: absolute;
+.activity-stream .activity:hover .arrow-down{
+  border-top-color: #dcebff;  
 }
 
-#activity-stream .activity .details {
-  margin-left: 60px;
-  min-height: 35px;
-  padding-top: 5px;
-}
-#activity-stream .activity .title-wrapper .title {
-  display: inline-block;
-}
-
-#activity-stream .activity .title-wrapper h4 {
-  margin: 0;
-  padding: 0;
-  display: inline-block;
-  font-size: 13px;
+.activity-stream .avatar-wrap {
+  margin: 0 18px 0 0; 
+  
+  @media screen and (max-width: 767px){
+    margin-bottom: 10px;
+  }
 }
 
-#activity-stream .activity .title-wrapper h4 span.user {
-  font-weight: normal;
-  color: #888C95;
+.activity-stream .avatar {
+  max-width: none;
 }
 
-#activity-stream .activity .title-wrapper .links {
-  color: #A4A2A2;
-  display: inline-block;
-  float: right;
+.activity-stream .meta {
+  font-size: 12px;  
 }
 
-#activity-stream .activity .details p {
-  padding: 0;
-  margin: 0;
-  font-size: 12px;
-}
-
-.conversation-wrapper {
-  background-color: #efefef;
+/* comments component */
+.comments-box {
+  background-color: $lightGray;
   position: relative;
 }
 
-.conversation-wrapper .arrow-wrapper  {
-  background-color: #efefef;
-  color: white;
-  font-size: 12px;
-  padding: 15px 10px 5px 65px;
-}
-
-.conversation-wrapper .arrow-wrapper .arrow-down {
+.comments-box .arrow-down {
   position: absolute;
-  width: 0;
+  top: 0;
+  left: 20px;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-top: 10px solid white;
   border-bottom: 0;
-  margin-top: -16px;
-  margin-left: 15px;
 }
 
-.conversation-wrapper .comment-field {
+.comment-form .comment-field {
   font-size: 10px;
   border: 1px #888C95 solid;
-  width: 200px;
-  padding: 4px;
 }
 
-.conversation-wrapper .conversation-loading {
+.comments-box .conversation-loading {
   display: none;
   padding: 10px;
   text-align: center;
 }
 
-.conversation-wrapper .conversation .comment,
-.conversation-wrapper .write-comment-box {
-  border-bottom: 1px white solid;
-  padding: 10px 10px 10px 70px;
+.comment-form {
+  margin-bottom: 0;
+  padding: 15px 10px 10px 10px;
+}  
+
+.comment-form .comment-area {
+  margin-bottom: 5px;
+  width: 100%;
+  display: block;
+  
+  @media screen and (max-width: 767px){
+    width: 80%;
+  }
 }
 
-.conversation-wrapper .conversation .comment .image {
+.comments-box .comment{
+  padding: 15px 10px 10px 10px;
+}
+
+.comments-box .conversation .comment .image {
   width: 50px;
   position: absolute;
 }
-.conversation-wrapper .conversation .comment .details {
+.comments-box .conversation .comment .details {
   margin-left: 50px;
   min-height: 40px;
 }
-.conversation-wrapper .conversation .comment .details .date {
+.comments-box .conversation .comment .details .date {
   color: #a4a2a2;
 }
 
-.conversation-wrapper .conversation .rating {
+.comments-box .conversation .rating {
   border-bottom: 1px white solid;
   padding: 5px 10px 5px 70px;
 }
 
-.conversation-wrapper .conversation .rating .details {
+.comments-box .conversation .rating .details {
   margin-left: 50px;
   min-height: 20px;
 }
-.conversation-wrapper .conversation .rating .details .date {
+.comments-box .conversation .rating .details .date {
   color: #a4a2a2;
 }
+/* comments component end */
 
-.layout-2-columns-equal .first,
-.layout-2-columns-equal .second {
-  width: 50%;
-  float: left;
-}
 
-.layout-2-columns-equal .first {
-  background: green;
-}
-.layout-2-columns-equal .second {
-  background: yellow;
-}
 
 .document-overview .document {
   display: inline-block;
